<resources>
    <string name="app_name">SchoTu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_tutor">Login Tutor</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="client_home_page">Client Home Page</string>
    <string name="tutor_password">Tutor Password</string>
    <string name="tutor_name">Tutor name</string>
    <string name="tutor_email">Tutor Email</string>
    <string name="button">Button</string>
    <string name="tutor_home_page">Tutor Home Page</string>
</resources>