<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginTutor">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Tutor Login Page"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="66dp"
        android:paddingTop="26dp"
        android:paddingBottom="188dp"
        tools:ignore="MissingConstraints">



        <EditText
            android:id="@+id/TutorName"
            android:hint="@string/tutor_name"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"

            android:autofillHints="" />
        <EditText
            android:id="@+id/TutorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tutor_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="186dp"
        android:paddingBottom="60dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp">

        <Button
            android:id="@+id/sign_in_Tutor"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"

            />


        <Button
            android:id="@+id/sign_up_Tutor"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"

            />
    </LinearLayout>
</RelativeLayout>