<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="36dp">
    <LinearLayout
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >



        <EditText
            android:id="@+id/edtTutorName"
            android:hint="@string/tutor_name"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"

            android:autofillHints="" />

        <EditText
            android:id="@+id/edtTutorPassword"
            android:hint="@string/tutor_password"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edtTutorEmail"
            android:hint="@string/tutor_email"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="148dp"
        android:text="Submit" />


</RelativeLayout>